# process-gpt-react-voice-agent

./: .env.example  .gitignore  Dockerfile  README.md  deployment.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy-prod.yaml  deploy.yaml
langchain_openai_voice/: __init__.py  utils.py
server/: app.py  database.py  process_definition.py  prompt.py  tools.py  utils.py
