[project]
name = "react-voice-agent"
version = "0.1.0"
description = "Voice agent for process management using OpenAI GPT"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "langchain-community>=0.3.1",
    "langchain-openai>=0.2.1",
    "langgraph>=0.2.32",
    "starlette>=0.39.2",
    "supabase>=2.17.0",
    "uvicorn[standard]>=0.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["server", "langchain_openai_voice"]
